add login endpoint (no jwt)
* created directory for auth controllers
* created custom models for creation, logging in, getting
* jwt to be made
